--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: sans-serif;
-  background-color: rgb(10, 16, 39);
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 body {
   margin: 0;
+  background-color: #3f3f3f;
 }
