--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -10,6 +10,11 @@
     margin: 0;
     padding: 0;
   }
+
+  .loadingMeals {
+    text-align: center;
+    color: white;
+  }
   
   @keyframes meals-appear {
     from {
